--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_background_service: ^5.1.0
+  workmanager:
+    git:
+      url: https://github.com/fluttercommunity/flutter_workmanager.git
+      path: workmanager
+      ref: main
+  uuid: ^4.5.1
+  http: ^1.3.0
+  do_not_disturb: 1.0.3
 
 dev_dependencies:
   flutter_test:
